syntax = "proto3";
package proto;

import "persistent_storage.proto";

message Front50Config {
  Spinnaker spinnaker = 1;

  message Spinnaker {
    string persistentStoreType = 1;
    GCS gcs = 2;
  }
}
