syntax = "proto3";
package proto;

import "providers.proto";

message ClouddriverConfig {
    Kubernetes kubernetes = 1;
    Google google = 2;
    Appengine appengine = 3;
}